# Yellow_belt

./: .gitignore  CMakeLists.txt  README.md
Week_1/task_2_avgTemp/: avgTemp.cpp
Week_1/task_3_blocks/: blocks.cpp
Week_1/task_4_regions_base/: main.cpp
Week_1/task_5_teamTasks/: teamTasks.cpp
Week_1/task_6_sqr/: main.cpp
Week_1/task_7_link/: main.cpp
Week_1/template_code/: main.cpp
Week_2/task_1_decomposition/: main.cpp
Week_2/task_2_test_for_Get/: test_for_get.cpp
Week_2/task_3_tests_person/: test_person.cpp
Week_2/task_4_test_rational/: test_rational.cpp
Week_2/task_5_test_isPalindrom/: test_palindrome.cpp
Week_2/unit_test_framework/: test_framework.cpp
Week_3/task_1_sum_reverse_sort/: main.cpp  sum_reverse_sort.cpp  sum_reverse_sort.h  tests.cpp  tests.h
Week_3/task_2_phone_number/: main.cpp  phone_number.cpp  phone_number.h  tests.cpp  tests.h
Week_3/task_3_rectangle_h/: rectangle.h
Week_3/task_4_dec_2/: bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h  task_4_dec_2.rar
Week_4/task_10_1_groups/: main.cpp
Week_4/task_10_2_groups/: main.cpp
Week_4/task_11_1_arithm_exp/: main.cpp
Week_4/task_11_2_arithm_exp/: main.cpp
Week_4/task_1_parts_of_vector/: main.cpp  tests.cpp  tests.h
Week_4/task_2_find_greater/: main.cpp
Week_4/task_3_SplitIntoWords/: main.cpp
Week_4/task_4_del_repeats/: main.cpp
Week_4/task_5_permutations/: main.cpp
Week_4/task_6_demography/: main.cpp  person.h  stat.cpp  stat.h
Week_4/task_7.1_sort/: main.cpp
Week_4/task_7.2_sort/: main.cpp
Week_4/task_8_findnearest/: main.cpp
Week_4/task_9_names_surnames_4/: main.cpp
test_framework/: test_framework.cpp  test_framework.h
(+26 files in other folders)
